[tool.poetry]
name = "gpt-training"
version = "0.1.0"
description = "GPT Training"
authors = ["Masato Naka <masatonaka1989@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.3"
streamlit = "^1.30.0"
openai = "^1.7.2"
langchainhub = "^0.1.14"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"
google-api-python-client = "^2.115.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# From https://github.com/googleapis/google-cloud-python/issues/11184
# https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--junitxml=pytest.xml --cov-report=term-missing --cov=src tests/ -vvv -s"
env = [
    "ENV=test",
    "OPENAI_API_KEY=",
    "OPENAI_ORGANIZATION=",
    "GOOGLE_CSE_ID=dummy",
    "GOOGLE_API_KEY=dummy",
]
