[tool.poetry]
name = "gpt-training"
version = "0.1.0"
description = "GPT Training"
authors = ["Masato Naka <masatonaka1989@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.3"
streamlit = "^1.30.0"
openai = "^1.7.2"
langchainhub = "^0.1.14"
langchain = "^0.1.4"
langchain-openai = "^0.0.8"
google-api-python-client = "^2.115.0"
langchain-google-genai = "^0.0.9"
pillow = "^10.2.0"
langgraph = "^0.0.26"
wikipedia = "^1.4.0"
google-search-results = "^2.4.2"
google-generativeai = "^0.3.2"
langchain-experimental = "^0.0.53"
tabulate = "^0.9.0"
plotly = "^5.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-env = "^1.1.3"
poetry-dotenv-plugin = "^0.2.0"
mkdocs-awesome-pages-plugin = "^2.9.2"
ruff = "^0.3.0"

[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]

line-length = 200
indent-width = 4


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# From https://github.com/googleapis/google-cloud-python/issues/11184
# https://docs.pytest.org/en/stable/reference/customize.html
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
env = [
    "ENV=test",
    "OPENAI_API_KEY=dummy",
    "OPENAI_ORGANIZATION=dummy",
    "GOOGLE_CSE_ID=dummy",
    "GOOGLE_API_KEY=dummy",
]
